data/derived/sp14/progs/unify/prog1312.ml.out
Characters 60-62:
  else n - (n/10) * 10 append digitsOfInt (n/10);;
                    ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
